Fixes some wrong localisations

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,8 +9,8 @@
   max-width: calc(100% - 20px);
   margin: 0 auto;
   padding: 0 10px;
-  font-size: 2rem;
-  line-height: 2rem;
+  font-size: 3rem;
+  line-height: 3rem;
 }
 
 .heading {
@@ -21,4 +21,12 @@
 .main-symbol {
   width: 10rem;
   height: 10rem;
+}
+
+.jspsych-btn {
+  font-size: 2rem;
+}
+
+#which-mic {
+  font-size: 2rem;
 }
