--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  //background-color: #EDE8D0;
   line-height: 1.6;
   min-height: 100vh;
 }
