Fixed missing file, fixed missing entry in randomization sheet, updated german localization

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,7 @@
 @import "~jspsych/css/jspsych.css";
 
 html.task1 {
-  background-color: #fff0f0;
+  background-color: #fffff0;
 }
 
 html.task2 {
@@ -9,7 +9,7 @@ html.task2 {
 }
 
 html.task3 {
-  background-color: #fffff0;
+  background-color: #f0ffff;
 }
 
 html {
